# MindTrace

./: .gitignore  CMakeLists.txt  README.md  build_errors.txt  build_errors2.txt  build_errors3.txt  test_results.txt
apps/cli/: main.cpp
include/collectors/: collector_base.hpp  window_focus_collector.hpp
include/common/: logging.hpp
include/core/pipeline/: concurrent_queue.hpp  event_pipeline.hpp
include/search/: query_executor.hpp
include/timeline/: timeline_builder.hpp
scripts/: build.bat  build.sh
src/collectors/: browser_collector.cpp  browser_collector.hpp  clipboard_collector.cpp  clipboard_collector.hpp  filesystem_collector.cpp  filesystem_collector.hpp  window_focus_collector.cpp  window_focus_collector.hpp
src/common/: config.hpp  utils.hpp
src/core/event/: activity_event.cpp  activity_event.hpp
src/core/indexing/: inverted_index.cpp  inverted_index.hpp
src/core/pipeline/: event_pipeline.cpp
src/core/storage/: event_repository.hpp  event_store.cpp  event_store.hpp
src/search/: query_executor.cpp  query_parser.cpp  query_parser.hpp  query_planner.cpp  query_planner.hpp
src/timeline/: timeline_builder.cpp
tests/: CMakeLists.txt  test_activity_event.cpp  test_collectors.cpp  test_concurrent_queue.cpp  test_event_pipeline.cpp  test_event_store.cpp  test_inverted_index.cpp  test_query_executor.cpp  test_query_parser.cpp  test_timeline_builder.cpp
